2001-12-10  joe c   <marcus@marcuscom.com>
	* bin/cnid/cnid_didname_verify,c: Add a utility to verify the consistency
	of didname.db.  Using the stock db_verify utility will fail as the sort
	routine is unknown.

2001-12-07  joe c   <marcus@marcuscom.com>
	* libatalk/cnid/cnid_open.c: Re-enable synchronous transaction support
	to try improve performance.

2001-12-04  joe c   <marcus@marcuscom.com>
	* etc/afpd/unix.c: Fix afpd sharing NFSv3 mounts (thanks to 
	Pierre Beyssac <beyssac@enst.fr>)

2001-12-03  joe c   <marcus@marcuscom.com>
	* etc/afpd/*.[ch]: Big commit to clean up code with astyle (readable code 
	is hackable code).  Also committed a fix to give CNID DB a shot in
	production use.

2001-11-27  joe c   <marcus@marcuscom.com>
	* configure.in: Removed the --with-cnid-db option, and added
	  --with-did=cnid for consistency

2001-11-19  pooba53 <bobo@bocklabs.wisc.edu>
    * Modified distrib/initscripts/Makefile.am so
      that SuSE init script ends up in the correct directory.

2001-11-19  pooba53 <bobo@bocklabs.wisc.edu>
	* modified config/AppleVolumes.default to not 
          have the "/Home Directory" text in it as this is not the
          proper way of allowing default Home directory access.

2001-11-16  jnewman <jnewman@mudpup.com>
	* macros/db3-check.m4: Prefer specific directories before general ones
	
2001-11-15  pooba53 <bobo@bocklabs.wisc.edu>
        * Modified SuSE initscript, distrib/initscripts/rc.atalk.suse.tmpl

2001-11-08  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/uam.c, etc/uams/uams_pam.c, etc/uams/uams_dhx_pam.c,
	include/atalk/uam.h: implemented patch #477640 for netatalk not
	passing client name properly (thanks to Patrick Bihan-Faou
	<pbf@users.sourceforge.net>)

2001-11-04  joe c <marcus@marcuscom.com>

	* libatalk/cnid/cnid_open.c: Re-added code to enable on-the-fly database
	recovery

2001-10-31  Dan <bobo@bocklabs.wisc.edu>
        * Fixed bug in bin/afppasswd/Makefile.am causing compile problems